syntax = "proto3";

package com.epam.javamentoring.protocols;

option java_multiple_files = true;
option java_package = "com.epam.javamentoring.protocols.grpcjavaclient.ping";

service PingService {
  rpc ping(PingRequest) returns (PingResponse);
}

message PingRequest {
  string message = 1;
}

message PingResponse {
  string message = 1;
}
